--- a/views/default/brainstorm.html
+++ b/views/default/brainstorm.html
@@ -31,14 +31,19 @@
 
 
 </script>
-
+{{ import json }}
 <div id="area-brainstorm" class="container-fluid">
     <div class="row-fluid">
         <div class="span5">
             {{if 'brainstorm_notes' in globals():}}
                 <ul class="notes-container">
                 {{for i in brainstorm_notes:}}
+                    {{ if i.position_: }}
+                      {{ position = json.loads(i.position_) }}
+                      <li class='{{=g_current_page("default/brainstorm/%s" %i.id,"active")}} note' data-id="{{=i.id}}" style="left: {{=position['left']}}px; top: {{=position['top']}}px;">
+                    {{ else: }}
                     <li class='{{=g_current_page("default/brainstorm/%s" %i.id,"active")}} note' data-id="{{=i.id}}">
+                    {{ pass }}
                         <p>{{=i.text_}}</p>
                         <hr>
                         <p>Criado por: {{=i.created_by.name}}</p>
