picks up relative url via web2py

--- a/views/default/brainstorm.html
+++ b/views/default/brainstorm.html
@@ -3,7 +3,8 @@
 <script>
     // OBS: other global variables for this page
     var url = {
-      create_note : '{{=URL("_create_note")}}'
+      create_note : '{{=URL("_create_note")}}',
+      savePosition: '{{=URL("_save_position")}}'
     },
     msg = {
         note_default_text : '{{=T("Your text")}}',
