--- a/static/css/brainstorm.css
+++ b/static/css/brainstorm.css
@@ -1,8 +1,15 @@
 .note {
+    width: 200px;
     list-style: none;
     padding: 10px;
     margin: 10px;
     position: relative;
     background-color: #f1c40f;
+    display: inline-block;
+}
+
+.icon-note {
+    color: red;
+    float: right;
 }
 
