--- a/views/default/index.html
+++ b/views/default/index.html
@@ -150,7 +150,7 @@
 
     <footer>
       <p>
-        Copyleft © 2015 Scrumforme. Desenvolvido por <a href="http://x4start.com" target="_blank">X4 Start</a> & <a href="http://kolaborativa.com" target="_blank">Kolaborativa</a>
+        Copyleft <span style="-moz-transform: scaleX(-1); -o-transform: scaleX(-1); -webkit-transform: scaleX(-1); transform: scaleX(-1); display: inline-block;">&copy;</span> {{=request.now.year}} Scrumforme. Desenvolvido por <a href="http://x4start.com" target="_blank">X4 Start</a> & <a href="http://kolaborativa.com" target="_blank">Kolaborativa</a>
       </p>
     </footer>
 
