--- a/views/default/breadcrumb.html
+++ b/views/default/breadcrumb.html
@@ -9,6 +9,9 @@
           <div>
             <button class="btn btn-success add-note">Add note</button>
           </div>
+          <div id="note" class="note">
+            NOVA NOTA +
+          </div>
         {{ pass }}
         <div class="clearfix"></div>
     </div>
