--- a/static/css/brainstorm.css
+++ b/static/css/brainstorm.css
@@ -5,8 +5,25 @@
     cursor: move;
 }
 
+#note p {
+    color: #2A2A2A;
+    text-align: center;
+    line-height: 25px;
+}
+
 .notes-container {
     min-width: auto;
+}
+
+.note-add-thumb {
+    background-color: #f1c40f;
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    padding: 5px;
+    float: right;
+    margin-right: 1rem;
+    margin-bottom: .5rem;
 }
 
 .note {
@@ -28,5 +45,4 @@
     color: red;
     float: right;
 }
-
 
