--- a/views/default/breadcrumb.html
+++ b/views/default/breadcrumb.html
@@ -6,7 +6,7 @@
             <a href="#" class="current">{{=response.title or request.function}}</a>
         </div>
         {{ if request.function == 'brainstorm': }}
-          <div id="note" class="note-add-thumb">
+          <div id="note-add" class="note-add-thumb">
             <p>Nova Nota</p>
           </div>
         {{ pass }}
