--- a/views/default/brainstorm.html
+++ b/views/default/brainstorm.html
@@ -45,11 +45,16 @@
                     {{ else: }}
                       <li class='{{=g_current_page("default/brainstorm/%s" %i.id,"active")}} note' data-id="{{=i.id}}">
                     {{ pass }}
+                      <div class="note-header">
+                        <i class="icon-note-header icon-note-header--delete icon-trash"></i>
+                        <div class="clearfix"></div>
+                      </div>
+                      <div class="note-content">
                         <p>{{=i.text_}}</p>
-                        <hr>
-                        <p>Criado por: {{=i.created_by.name}}</p>
-                        <p>Criado em: {{=i.created_at.strftime('%d/%m/%Y')}}</p>
-                        <!--<i class="icon-note icon-trash"></i>-->
+                      </div>
+                      <div class="note-footer">
+                        {{=i.created_at.strftime('%d/%m/%Y')}} - {{=i.created_by.name}}
+                      </div>
                     </li>
 
                 {{pass}}
