--- a/views/default/layout_base.html
+++ b/views/default/layout_base.html
@@ -183,6 +183,7 @@
             {{ elif request.function == 'brainstorm': }}
             <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
             <script src='{{=URL("static","js/brainstorm.js")}}'></script>
+            <script src='{{=URL("static","js/brainstorm-editable.js")}}'></script>
 
             {{ elif request.function == "card": }}
             <script src='{{=URL("static","js/jquery-2.0.0.min.js")}}'></script>
