first displaying the new note and then write to the database

--- a/views/default/brainstorm.html
+++ b/views/default/brainstorm.html
@@ -10,7 +10,8 @@
     },
     msg = {
         note_default_text : '{{=T("Your text")}}',
-        confirm : '{{=T("Are you sure you want to continue?")}}'
+        confirm : '{{=T("Are you sure you want to continue?")}}',
+        create_note_error : '{{=T("Error creating note!")}}'
     },
 //    txt = {
 //        team_page : '{{=T("Team Page")}}',
