--- a/views/default/brainstorm.html
+++ b/views/default/brainstorm.html
@@ -13,28 +13,10 @@
         confirm : '{{=T("Are you sure you want to continue?")}}',
         create_note_error : '{{=T("Error creating note!")}}'
     },
-//    txt = {
-//        team_page : '{{=T("Team Page")}}',
-//        started_in : '{{=T("Started in")}}',
-//        activities : '{{=T("Activities")}}',
-//        upload : '{{=T("Upload")}}',
-//        labels : '{{=T("Labels")}}',
-//        delete_card : '{{=T("Delete")}}',
-//        type_message : '{{=T("Type your message")}}',
-//    },
-//    button = {
-//        comment : '{{=T("Comment")}}',
-//        edit : '{{=T("Edit")}}',
-//        save : '{{=T("Save")}}',
-//        cancel : '{{=T("Cancel")}}',
-//        delete : '{{=T("Delete")}}',
-//    },
     info = {
         project_id : '{{=project_id}}',
-        person_id : '{{=person_id}}',
+        person_id : '{{=person_id}}'
     }
-
-
 </script>
 {{ import json }}
 <div  class="container-fluid">
