--- a/views/default/brainstorm.html
+++ b/views/default/brainstorm.html
@@ -38,7 +38,7 @@
                         <div class="clearfix"></div>
                       </div>
                       <div class="note-content">
-                        <a class="editable-click editable" data-type="textarea" data-pk="{{=i.id}}" data-url="/_update_note.json" style="display: inline;">{{=i.text_}}</a>
+                        <a class="editable-click editable" data-type="textarea" data-pk="{{=i.id}}" data-url="{{=URL('_update_note.json')}}" style="display: inline;">{{=i.text_}}</a>
                         <div class="clearfix"></div>
                       </div>
                       <div class="note-footer">
