--- a/views/default/layout_base.html
+++ b/views/default/layout_base.html
@@ -106,6 +106,7 @@
                         <li><a href="#" class="tip-right" alt="{{=T('Archives')}}" title="{{=T('Archives')}}"><i class="icon-file"></i> <span>{{=T('Archives')}}</span></a></li>
                         <li class='{{=g_current_page("default/team/%s" %request.args(0),"active")}}'><a href='{{=URL(f="team",args=[request.args(0)])}}' class="tip-right" alt="{{=T('Team')}}" title="{{=T('Team')}}"><i class="icon-group"></i> <span>{{=T('Team')}}</span></a></li>
                         <li class='{{=g_current_page("default/statistics/%s" %request.args(0),"active")}}'><a href='{{=URL(f="statistics",args=[request.args(0)])}}' class="tip-right" alt="{{=T('Statistics')}}" title="{{=T('Statistics')}}"><i class="icon-graph "></i> <span>{{=T('Statistics')}}</span></a></li>
+                        <li class='{{=g_current_page("default/statistics/%s" %request.args(0),"active")}}'><a href='{{=URL(f="brainstorm",args=[request.args(0)])}}' class="tip-right" alt="{{=T('Brainstorm')}}" title="{{=T('Brainstorm')}}"><i class="icon-idea "></i> <span>{{=T('Brainstorm')}}</span></a></li>
                     {{pass}}
                     <li><button id="toogle_sidebar" class="tip-right" alt="{{=T('Expand / Collapse Menu')}}" title="{{=T('Expand / Collapse Menu')}}"><i class='{{=g_if_in_current_page("default/board/%s" %request.args(0),"icon-chevron-right", "icon-chevron-left")}} icon-white'></i> <span>{{=T('Collapse Menu')}}</span></button></li>
                 {{else:}}
