--- a/views/default/brainstorm.html
+++ b/views/default/brainstorm.html
@@ -6,7 +6,10 @@
       create_note : '{{=URL("_create_note")}}',
       savePosition: '{{=URL("_save_position")}}',
       update_note : '{{=URL("_update_note.json")}}',
-      remove_note: '{{=URL("_remove_note.json")}}'
+      remove_note: '{{=URL("_remove_note.json")}}',
+      createGroup: '{{=URL("_create_group.json")}}',
+      add_notes_in_group: '{{=URL("_add_notes_in_group.json")}}',
+      current: '{{=URL("brainstorm")}}'
     },
     msg = {
         note_default_text : '{{=T("Your text")}}',
@@ -23,7 +26,7 @@
     <div class="row-fluid">
         <div id="area-brainstorm" class="span12">
             {{if 'notes' in globals():}}
-                <ul class="notes-container">
+                <ul class="notes-container" data-type="no-group-notes">
                 {{for i in notes:}}
                     {{ if i.position_: }}
                       {{ position = json.loads(i.position_) }}
@@ -52,7 +55,7 @@
             <!-- Notes with Group -->
             {{if 'groups_notes' in globals():}}
                 {{for i in groups_notes:}}
-                  <ul class="notes-container group-notes">
+                  <ul class="notes-container group-notes" data-type="group-notes" data-groupId="{{=i.id}}">
                     <h3>{{=i.title}}</h3>
                     {{ for note in i.notes: }}
                         <li class='{{=g_current_page("default/brainstorm/%s" %i.id,"active")}} note note--panel' data-id="{{=note.note_id}}" data-type='note' style="position:static;">
