add effect when creating group

--- a/views/default/layout_base.html
+++ b/views/default/layout_base.html
@@ -73,6 +73,7 @@
         <link rel="stylesheet" href='{{=URL("static","css/card_modal.css")}}' />
         {{ elif request.function == 'brainstorm': }}
         <link rel="stylesheet" href="{{=URL('static', 'css/brainstorm.css')}}">
+        <link rel="stylesheet" href="{{=URL('static', 'css/animate.css')}}">
         {{pass}}
 
         {{ if not request.function == "projects": }}
