--- a/views/default/brainstorm.html
+++ b/views/default/brainstorm.html
@@ -41,7 +41,7 @@
                         <div class="clearfix"></div>
                       </div>
                       <div class="note-content">
-                        <a class="editable-click editable" data-type="textarea" data-pk="{{=i.id}}" data-url="{{=URL('_update_note.json')}}" style="display: inline;">{{=i.text_}}</a>
+                        <a class="editable-click editable" data-type="textarea" data-pk="{{=i.id}}" data-url="{{=URL('_update_items.json')}}" data-type-text="note-text" style="display: inline;">{{=i.text_}}</a>
                         <div class="clearfix"></div>
                       </div>
                       <div class="note-footer">
@@ -69,7 +69,7 @@
                           <div class="clearfix"></div>
                         </div>
                         <div class="note-content">
-                          <a class="editable-click editable" data-type="textarea" data-pk="{{=note.note_id.id}}" data-url="{{=URL('_update_items.json')}}" style="display: inline;">{{=note.note_id.text_}}</a>
+                          <a class="editable-click editable" data-type="textarea" data-pk="{{=note.note_id.id}}" data-url="{{=URL('_update_items.json')}}" data-type-text="note-text" style="display: inline;">{{=note.note_id.text_}}</a>
                           <div class="clearfix"></div>
                         </div>
                         <div class="note-footer">
