stylizing the edition of the title group

--- a/views/default/brainstorm.html
+++ b/views/default/brainstorm.html
@@ -56,7 +56,7 @@
             {{if 'groups_notes' in globals():}}
                 {{for i in groups_notes:}}
                   <ul class="notes-container group-notes" data-type="group-notes" data-groupId="{{=i.id}}">
-                    <h3 class="editable-click editable" data-type="textarea" data-pk="{{=i.id}}" data-url="{{=URL('_update_items.json')}}" data-type-text="group-title">
+                    <h3 class="editable-click editable title-group" data-type="textarea" data-pk="{{=i.id}}" data-url="{{=URL('_update_items.json')}}" data-type-text="group-title">
                       {{=i.title}}
 
                     </h3>
