--- a/static/css/brainstorm.css
+++ b/static/css/brainstorm.css
@@ -94,6 +94,11 @@
     margin: 0 0 2em 0;
 }
 
+.title-group + .editable-container {
+    display: block;
+    margin-bottom: 4em;
+}
+
 .input-large {
     width: 100%;
     margin: 5px 0px 0px 5%;
