remove the group remains only one note

--- a/views/default/brainstorm.html
+++ b/views/default/brainstorm.html
@@ -10,6 +10,9 @@
       createGroup: '{{=URL("_create_group.json")}}',
       add_notes_in_group: '{{=URL("_add_notes_in_group.json")}}',
       remove_notes_from_group: '{{=URL("_remove_notes_from_group.json")}}',
+      remaining_notes: '{{=URL("_remaining_notes.json")}}',
+      remove_group: '{{=URL("_remove_group.json")}}',
+
       current: '{{=URL("brainstorm")}}'
     },
     msg = {
