--- a/views/default/brainstorm.html
+++ b/views/default/brainstorm.html
@@ -41,6 +41,7 @@
                       <div class="note-header">
                         {{ if user_has_permission_for_delete_note(i.created_by): }}
                           <i class="icon-note-header icon-note-header--delete icon-trash" data-pk="{{=i.id}}"></i>
+                          <i class="icon-note-header icon-note-header--color icon-tint" data-pk="{{=i.id}}"></i>
                         {{ pass }}
                         <div class="clearfix"></div>
                       </div>
@@ -51,7 +52,15 @@
                       <div class="note-footer">
                         {{=i.created_at.strftime('%d/%m/%Y')}} - {{=i.created_by.name}}
                       </div>
+                      <div class="color-palette animated bounceIn">
+                        <span class="thumb-color" data-color="#FFD180"></span>
+                        <span class="thumb-color" data-color="#FF8A80"></span>
+                        <span class="thumb-color" data-color="#FFFF8D"></span>
+                        <span class="thumb-color" data-color="#80D8FF"></span>
+                        <span class="thumb-color" data-color="#CCFF90"></span>
+                      </div>
                     </li>
+
                 {{pass}}
                 </ul>
             {{pass}}
