updated position of the last remaining note before removing the group

--- a/views/default/brainstorm.html
+++ b/views/default/brainstorm.html
@@ -7,6 +7,7 @@
       savePosition: '{{=URL("_save_position")}}',
       savePositionGroup: '{{=URL("_save_position_group")}}',
       update_items : '{{=URL("_update_items.json")}}',
+      update_last_note_position : '{{=URL("_update_last_note_position.json")}}',
       remove_note: '{{=URL("_remove_note.json")}}',
       createGroup: '{{=URL("_create_group.json")}}',
       add_notes_in_group: '{{=URL("_add_notes_in_group.json")}}',
