--- a/views/default/layout_base.html
+++ b/views/default/layout_base.html
@@ -72,6 +72,7 @@
         <link rel="stylesheet" href='{{=URL("static","css/sprints.css")}}' />
         <link rel="stylesheet" href='{{=URL("static","css/card_modal.css")}}' />
         {{ elif request.function == 'brainstorm': }}
+        <link href='https://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="{{=URL('static', 'css/brainstorm.css')}}">
         <link rel="stylesheet" href="{{=URL('static', 'css/animate.css')}}">
         {{pass}}
