--- a/static/css/brainstorm.css
+++ b/static/css/brainstorm.css
@@ -33,16 +33,17 @@
 }
 
 .note {
+    float:left;
     width: 200px;
     list-style: none;
     padding: 10px;
     margin: 10px;
     min-height: 142px;
-    background-color: #f1c40f;
+    background-color: #FFD180;
     display: inline-block;
-    border-radius: 5px;
+    border-radius: 2px;
     box-shadow: 2px 2px 2px #c6c6c6;
-
+    font-family: 'Roboto', sans-serif;
 }
 
 .note--panel {
@@ -69,6 +70,8 @@
 
 .note-content {
     height:80%;
+    margin-bottom: 1em;
+    font-size: 15px;
 }
 
 .note-footer {
@@ -79,7 +82,14 @@
     bottom: 0;
     right: .5em;
     text-align: right;
-    font-size: .8em;
+    font-size: 10px;
+}
+
+h3.title-group {
+    font-family: 'Roboto', sans-serif;
+    font-size: 33px;
+    font-weight: bold;
+    color: #487a89;
 }
 
 .group-notes {
@@ -89,7 +99,7 @@
     margin: 0;
     width: 500px;
     padding: 10px;
-    background-color: #ecf0f1;
+    background-color: #d1d1d1;
     position: absolute;
 
 }
