--- a/views/default/brainstorm.html
+++ b/views/default/brainstorm.html
@@ -19,6 +19,8 @@
     },
     msg = {
         note_default_text : '{{=T("Your text")}}',
+        alert: '{{=T("Alert!")}}',
+        note_removed: '{{=T("A note was removed")}}',
         confirm : '{{=T("Are you sure you want to continue?")}}',
         create_note_error : '{{=T("Error creating note!")}}'
     },
