--- a/views/default/layout_base.html
+++ b/views/default/layout_base.html
@@ -73,6 +73,12 @@
         <link rel="stylesheet" href='{{=URL("static","css/card_modal.css")}}' />
         {{ elif request.function == 'brainstorm': }}
         <link href='https://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet' type='text/css'>
+
+        <!-- Alertify CSS -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/alertifyjs/1.6.1/css/alertify.min.css"/>
+        <!-- Alertify CSS Default theme -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/alertifyjs/1.6.1/css/themes/default.min.css"/>
+
         <link rel="stylesheet" href="{{=URL('static', 'css/brainstorm.css')}}">
         <link rel="stylesheet" href="{{=URL('static', 'css/animate.css')}}">
         {{pass}}
@@ -185,8 +191,11 @@
 
             {{ elif request.function == 'brainstorm': }}
             <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+            <script src="https://cdn.jsdelivr.net/alertifyjs/1.6.1/alertify.min.js"></script>
             <script src='{{=URL("static","js/brainstorm.js")}}'></script>
             <script src='{{=URL("static","js/brainstorm-editable.js")}}'></script>
+            <!-- Alertify JavaScript -->
+
 
             {{ elif request.function == "card": }}
             <script src='{{=URL("static","js/jquery-2.0.0.min.js")}}'></script>
