--- a/static/css/brainstorm.css
+++ b/static/css/brainstorm.css
@@ -198,3 +198,53 @@ h3.title-group {
     text-align: left;
     text-transform: uppercase;
 }
+
+.fab-fixed-sfm {
+    position: fixed;
+    top: 50px;
+    right: 23px;
+    bottom: 23px;
+    padding-top: 15px;
+    margin-bottom: 0;
+    z-index: 998;
+
+}
+
+.fab-sfm {
+    width: 55px;
+    height: 55px;
+    display: inline-block;
+    color: #fff;
+    position: relative;
+    overflow: hidden;
+    z-index: 1;
+    line-height: 37px;
+    padding: 0;
+    background-color: #F44336;
+    border-radius: 50%;
+    transition: .3s;
+    cursor: pointer;
+    vertical-align: middle;
+    text-align: center;
+    letter-spacing: .5px;
+    text-transform: uppercase;
+    -webkit-tap-highlight-color: transparent;
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+    text-decoration: none;
+}
+
+.fab-sfm:hover {
+    color: #fff;
+    box-shadow: 0 4px 7px 0 rgba(0,0,0,0.16),0 5px 13px 0 rgba(0,0,0,0.12);
+}
+
+.fab-sfm i {
+    line-height: 50px;
+    margin-top: 4px;
+    font-size: 17.5px;
+    font-size: 1.6rem;
+    width: inherit;
+    display: inline-block;
+    text-align: center;
+    color: #fff;
+}
