--- a/views/default/brainstorm.html
+++ b/views/default/brainstorm.html
@@ -31,6 +31,12 @@
 </script>
 {{ import json }}
 <div  class="container-fluid container-fluid-brainstorm">
+    <div class="fab-fixed-sfm">
+      <a class="fab-sfm">
+        <i class="icon-plus"></i>
+      </a>
+    </div>
+
     <div class="row-fluid">
         <div id="area-brainstorm" class="span12">
             {{if 'notes' in globals():}}
