--- a/views/default/layout_base.html
+++ b/views/default/layout_base.html
@@ -126,20 +126,20 @@
         </div>
 
         <div id="content" class="container">
-            {{include "default/breadcrumb.html"}}
+            {{#include "default/breadcrumb.html"}}
 
             {{include}}
 
-            <div class="row-fluid">
+            <!-- <div class="row-fluid">
                 <!-- <div id="footer" class="span12">
-                    {{=T('Copyleft')}} <span style="-moz-transform: scaleX(-1); -o-transform: scaleX(-1); -webkit-transform: scaleX(-1); transform: scaleX(-1); display: inline-block;">&copy;</span> {{=request.now.year}} Scrumforme. {{=T('Developed by')}} <a href="http://agenciax4.com.br">AgenciaX4</a>
-                </div> -->
+                    {{#=T('Copyleft')}} <span style="-moz-transform: scaleX(-1); -o-transform: scaleX(-1); -webkit-transform: scaleX(-1); transform: scaleX(-1); display: inline-block;">&copy;</span> {{=request.now.year}} Scrumforme. {{=T('Developed by')}} <a href="http://agenciax4.com.br">AgenciaX4</a>
+                </div>
               <footer>
                 <p>
                   Copyleft <span style="-moz-transform: scaleX(-1); -o-transform: scaleX(-1); -webkit-transform: scaleX(-1); transform: scaleX(-1); display: inline-block;">&copy;</span> {{=request.now.year}} Scrumforme. Desenvolvido por <a href="http://x4start.com" target="_blank">X4 Start</a> & <a href="http://kolaborativa.com" target="_blank">Kolaborativa</a>
                 </p>
               </footer>
-            </div>
+            </div> -->
         </div>
 
 
@@ -164,9 +164,9 @@
             <script src='{{=URL("static","js/urlize.js")}}'></script>
             <script src='{{=URL("static","js/date.format.js")}}'></script>
             <!-- chat -->
-            {{include "default/chat.html"}}
-            <button class="call_chat button_chat btn btn-success" alt="Chat" title="Chat"><i class="icon-comment-alt"></i> Chat</button>
-            <script src='{{=URL("static","js/chat.js")}}'></script>
+            {{#include "default/chat.html"}}
+            <!-- <button class="call_chat button_chat btn btn-success" alt="Chat" title="Chat"><i class="icon-comment-alt"></i> Chat</button> -->
+            <!-- <script src='{{=URL("static","js/chat.js")}}'></script> -->
             <!-- call realtime JS -->
             <script>
                 var infoGlobal = {
